# ani-tui

./: Cargo.toml  README.md  install.sh
aur/ani-tui/: .SRCINFO  PKGBUILD
aur/ani-tui-git/: .SRCINFO  PKGBUILD
html_paginas/: README.md  zilla_player_js.js
src/: app.rs  config.rs  logger.rs  main.rs  player.rs  resolver.rs  routes.rs  security.rs  structs.rs
src/scraper/: client.rs  episodes.rs  mod.rs  search.rs  sources.rs
src/ui/: episodes.rs  help.rs  mod.rs  results.rs  search.rs  sources.rs
