[package]
name = "ani-tui"
version = "0.2.0"
edition = "2021"
description = "TUI interactiva para buscar y reproducir anime desde animeav1.com"
authors = ["glimp"]
license = "GPL-3.0"

[[bin]]
name = "ani-tui"
path = "src/main.rs"

[dependencies]
# — TUI —
ratatui = "0.29"
crossterm = "0.28"

# — CLI subcomandos —
clap = { version = "4.5", features = ["derive"] }

# — HTTP scraping (sin headless Chrome) —
reqwest = { version = "0.12", features = ["json", "gzip"] }
tokio = { version = "1.0", features = ["full"] }

# — Extracción de datos —
regex = "1.11"
scraper = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# — Manejo de errores —
anyhow = "1.0"
thiserror = "1.0"

# — Abrir URLs en reproductores externos —
open = "5.3"

# — Inicialización diferida de statics globales (logger) —
once_cell = "1.20"

# — API REST (modo serve) —
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[features]
# Habilitar el modo servidor API REST (subcomando `serve`)
serve = ["dep:axum", "dep:tower-http"]
default = ["serve"]

[profile.release]
opt-level = 3
lto = true
strip = true
